Добавил топокарту в СК WGS84

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+<!--    <link rel="stylesheet" type="text/css" href="stylesheets/templet.css"> -->
     <link rel="stylesheet" type="text/css" href="stylesheets/popup.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -21,6 +22,9 @@
 
     <section class="main-content">
 <p>This 3D models of the seabed around the Vernadsky Research Base (Ukrainian Antarctic Station).</p>
+<h3><a id="topo_vsia" class="anchor" href="#topo_vsia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Topo map</h3>
+<iframe width="600" height="450" frameborder="0" style="border: 1px solid black" src="http://abiatov.github.io/Antarctic_qgis2treejs/topo_vsia.html" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+<br>
 <h3><a id="Skua_Creek" class="anchor" href="#Skua_Creek" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skua Creek</h3>
 <iframe width="600" height="450" frameborder="0" style="border: 1px solid black" src="http://abiatov.github.io/Antarctic_qgis2treejs/SkuaCreek.html" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 <br>
