Обновил 3Д модели (Удалил панели управления)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="page-header">
       <h1 class="project-name">The seabed around the Vernadsky Research Base (Ukrainian Antarctic Station)</h1>
 <!--      <h2 class="project-tagline">View on new page:</h2> -->
-      <a target="_blank" href="http://abiatov.github.io/Antarctic_qgis2treejs/SkuaCreek.html" class="btn">Skua Creek</a><a target="_blank" href="http://abiatov.github.io/Antarctic_qgis2treejs/StellaCreek.html" class="btn">Stella Creek</a><a target="_blank" href="http://abiatov.github.io/Antarctic_qgis2treejs/PinguinPoint.html" class="btn">Pinguin Point</a>
+<!-- <a target="_blank" href="http://abiatov.github.io/Antarctic_qgis2treejs/SkuaCreek.html" class="btn">Skua Creek</a><a target="_blank" href="http://abiatov.github.io/Antarctic_qgis2treejs/StellaCreek.html" class="btn">Stella Creek</a><a target="_blank" href="http://abiatov.github.io/Antarctic_qgis2treejs/PinguinPoint.html" class="btn">Pinguin Point</a> -->
     </section>
 
     <section class="main-content">
@@ -39,6 +39,7 @@
 </div>
 <div class="b-popup" id="popup1">
     <div class="b-popup-content">
+<a href="javascript:PopUpHide()">Hide popup</a>
 <!--  <h3>ABNT</h3>
 СІННА, О.І.; УТЄВСЬКИЙ, А.Ю.; ПОПОВ, В.С.. ЦИФРОВЕ МОДЕЛЮВАННЯ РЕЛЬЄФУ ДНА АКВАТОРІЙ У РАЙОНІ УКРАЇНСЬКОЇ АНТАРКТИЧНОЇ СТАНЦІЇ «АКАДЕМІК ВЕРНАДСЬКИЙ». Проблеми безперервної географічної освіти і картографії, [S.l.], n. 21, p. 31-35, сер. 2015. ISSN 2409-3173. Доступно за адресою: &lt;http://journals.uran.ua/index.php/2409-3173/article/view/48777/45009>. Дата доступу: 28 бер. 2016&gt;<br>
 <h3>MLA</h3>
@@ -59,7 +60,6 @@
 &#9;url = {http://journals.uran.ua/index.php/2409-3173/article/view/48777},
 &#9;pages = {31--35}
 }</pre>
-<a href="javascript:PopUpHide()">Hide popup</a>
     </div>
 </div>
       <footer class="site-footer">
