подправил позиционирование iframe и h3

--- a/index.html
+++ b/index.html
@@ -23,18 +23,26 @@
     <section class="main-content">
 <p>This 3D models of the seabed around the Vernadsky Research Base (Ukrainian Antarctic Station).</p>
 <h3><a id="topo_vsia" class="anchor" href="#topo_vsia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Topo map</h3>
+<div align="center">
 <iframe width="80%" height="450" frameborder="0" style="border: 1px solid black" src="http://abiatov.github.io/Antarctic_qgis2treejs/topo_vsia.html" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+</div>
 <br>
 <h3><a id="Skua_Creek" class="anchor" href="#Skua_Creek" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skua Creek</h3>
+<div align="center">
 <iframe width="80%" height="450" frameborder="0" style="border: 1px solid black" src="http://abiatov.github.io/Antarctic_qgis2treejs/SkuaCreek.html" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+</div>
 <br>
 <h3><a id="Stella_Creek" class="anchor" href="#Stella_Creek" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Stella Creek</h3>
+<div align="center">
 <iframe width="80%" height="450" frameborder="0" style="border: 1px solid black" src="http://abiatov.github.io/Antarctic_qgis2treejs/StellaCreek.html" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+</div>
 <br>
 <h3><a id="Pinguin_Point" class="anchor" href="#Pinguin_Point" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pinguin Point</h3>
-<iframe width="80%" height="450" frameborder="0" style="border: 1px solid black" src="http://abiatov.github.io/Antarctic_qgis2treejs/PinguinPoint.html" marginwidth="0" marginheight="0" scrolling="no"></iframe><br>
+<div align="center">
+<iframe width="80%" height="450" frameborder="0" style="border: 1px solid black" src="http://abiatov.github.io/Antarctic_qgis2treejs/PinguinPoint.html" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+</div>
 <br>
-<div class="b-container">
+<div align="center" class="b-container">
     <h3><a href="javascript:PopUpShow()">How to cite data</a></h3>
 </div>
 <div class="b-popup" id="popup1">
